[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="bspcpy"
version="1.0.2"
license = { file = "LICENSE" }
readme = "README.md"
authors=[{ name = "AlanJS26", email = "alanjoses.29@gmail.com" }]
description="bspc wrapper for python"
keywords = ["python", "bspwm", "bspc"]
requires-python = ">=3.10"

dependencies = []

[project.urls]
Homepage="https://github.com/AlanJs26/bspcpy"
