[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name="bspcpy"
version="1.0.3.3"
license = { text = "MIT"}
readme = "README.md"
authors=[
    { name = "AlanJS26", email = "alanjoses.29@gmail.com" },
]
description="bspc wrapper for python"
keywords = ["python", "bspwm", "bspc"]
requires-python = ">=3.10"
dependencies = []


[project.urls]
Homepage="https://github.com/AlanJs26/bspcpy"
